added new main tag to index.html

--- a/index.html
+++ b/index.html
@@ -10,5 +10,16 @@
     <header>
         <h1>Welcome to our website</h1>
     </header>
+    <main>
+        <div class="container">
+            <h2>
+                our products
+            </h2>
+            <p>
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eos, ea labore provident perspiciatis culpa deleniti. Laborum, non magnam necessitatibus reprehenderit deleniti saepe tempora aperiam ducimus cupiditate, placeat adipisci sint hic
+                
+            </p>
+        </div>
+    </main>
 </body>
 </html>
