--- a/index.html
+++ b/index.html
@@ -21,5 +21,8 @@
             </p>
         </div>
     </main>
+    <footer>
+        <p> &copy; Copyright reserved 2026</p>
+    </footer>
 </body>
 </html>
