--- a/index.html
+++ b/index.html
@@ -9,6 +9,12 @@
 <body>
     <header>
         <h1>Welcome to our website</h1>
+        <nav>
+            <li><ul><a href="#">home</a></li>
+            <li><ul><a href="#">alone</a></li>
+            <li><ul><a href="#">boy</a></li>    
+            </ul>
+        </nav>
     </header>
     <main>
         <div class="container">
